--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -13,3 +13,22 @@
   gap: 5px 5px;
   background-color: tomato;
 }
+
+.card {
+	background-color: #f8f8f8;
+	padding: 15px;
+	transition: all 0.7s cubic-bezier(.25,.8,.25,1);
+	border-radius: 5px;
+}
+
+.wrapper {
+	padding: 10px;
+	box-sizing: border-box;
+	margin: 0;
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+	gap: 5px 5px;
+	background-image: -webkit-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+	background-image: -o-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+	background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+}
