--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -8,27 +8,30 @@
   box-sizing: border-box;
   margin: 0;
   display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 1.8fr 1fr; */
-  gap: 5px 5px;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 0.2fr 1.8fr 1fr;
+	gap: 5px 5px;
+	grid-template-areas:
+	    "leftnav";
   background-color: tomato;
 }
 
-.card {
-	background-color: #f8f8f8;
-	padding: 15px;
-	transition: all 0.7s cubic-bezier(.25,.8,.25,1);
-	border-radius: 5px;
+.leftnav {
+  grid-area: leftnav;
 }
 
-.wrapper {
-	padding: 10px;
-	box-sizing: border-box;
-	margin: 0;
-	display: grid;
-	grid-template-columns: 1fr 4fr;
-	gap: 5px 5px;
-	background-image: -webkit-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-	background-image: -o-linear-gradient(bottom, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
-	background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+.card2 h3 {
+  padding: 15px;
+	background-color:#32324f;
+  color: #f8f8f8;
+	transition: all 0.7s cubic-bezier(.25,.8,.25,1);
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.card2 h4 {
+  padding: 15px;
+  background-color:#32324f;
+  color: #f8f8f8;
+	margin-bottom: 10px;
+	font-size: 13px;
 }
