--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -36,7 +36,7 @@
 	font-size: 13px;
 }
 
-.item {
+.indicatorCard {
   background: #fff;
   margin: 20px;
   float: left;
@@ -49,19 +49,63 @@
   border-radius: 5%;
 }
 
-.item:hover {
+.indicatorCard:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   background-color: #fecea8;
 }
 
-.item a {
-  font-size: 30px;
+.links {
+  border-left: 1px solid rgba(238,238,237,255);
+  padding-left: 5px;
+  fill: #e84a5f;
+}
+
+.linkURL {
+  fill: #e84a5f;
+}
+
+.indicatorCard a {
+  font-size: 25px;
   color: #e84a5f;
   border-radius: 50%;
   border: 1px solid #e84a5f;
   float: right;
-  height: 46px;
-  width: 46px;
+  height: 20px;
+  width: 20px;
   text-align: center;
-  line-height: 46px;
+  line-height: 22px;
+}
+
+.indicatorCard h1{
+  font-size: 21px;
+  text-align: left;
+  border-bottom: 1px solid #424242;
+  padding-bottom: 15px;
+  display: flex;
+}
+
+.indicatorCard h2 {
+  font-size: 20px;
+  color: #3eaca8;
+  padding-top: 10px;
+  text-align: left;
+  font-style: normal;
+  font-family: 'Lato', sans-serif;
+}
+
+.indicatorCard h3 {
+  text-align: left;
+  font-size: 14px;
+  color: #d99c86;
+  font-family: 'Lato', sans-serif;
+  padding: 0px 0px 0px 5px;
+}
+
+.indicatorCard h4 {
+  text-align: left;
+  font-size: 14px;
+  color: #6f6f6f;
+  font-weight: 300;
+  font-family: 'Lato', sans-serif;
+  padding: 0px 0px 0px 5px;
 }
