Create styles for + button

--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -64,6 +64,18 @@
   fill: #e84a5f;
 }
 
+.expandIndicatorButton {
+  color: #e84a5f;
+  border-radius: 50%;
+  border: 1px solid #e84a5f;
+  float: right;
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  line-height: 22px;
+  cursor: pointer;
+}
+
 .indicatorCard a {
   font-size: 25px;
   color: #e84a5f;
