--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -4,7 +4,6 @@
 }
 
 .wrapperIndicators {
-  padding: 10px;
   box-sizing: border-box;
   margin: 0;
   display: grid;
@@ -18,6 +17,26 @@
 
 .leftnav {
   grid-area: leftnav;
+}
+
+.countD {
+  font-size: 18px;
+  margin-left: 20px;
+  padding: 20px 0 10px 0;
+  border-bottom: 1px solid #e84a5f;
+  width: 270px;
+  max-width: 270px;
+  display: inline-block;
+}
+
+.countDIcon {
+  font-size: 18px;
+  text-align: right;
+  display: inline;
+  padding: 0 0 11px 0;
+  border-bottom: 1px solid #e84a5f;
+  width: 20px;
+  color: #e84a5f;
 }
 
 .card2 h3 {
