--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -24,18 +24,10 @@
   margin-left: 20px;
   padding: 20px 0 10px 0;
   border-bottom: 1px solid #e84a5f;
-  width: 270px;
-  max-width: 270px;
-  display: inline-block;
-}
-
-.countDIcon {
-  font-size: 18px;
-  text-align: right;
-  display: inline;
-  padding: 0 0 11px 0;
-  border-bottom: 1px solid #e84a5f;
-  width: 20px;
+  width: 290px;
+  max-width: 290px;
+  display: flex;
+  justify-content: space-between;
   color: #e84a5f;
 }
 
