--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -13,6 +13,7 @@
     "leftnav";
   background-color: #eeeeec;
   min-height: calc(100vh - 269px);
+  overflow-y: scroll;
 }
 
 .leftnav {
@@ -22,6 +23,7 @@
 .countD {
   font-size: 18px;
   margin-left: 20px;
+  margin-bottom: 10px;
   padding: 20px 0 10px 0;
   border-bottom: 1px solid #e84a5f;
   width: 290px;
@@ -43,12 +45,20 @@
   cursor: pointer;
 }
 
+.cardTitles {
+  display: flex;
+  gap: 10px;
+  border-bottom: 1px solid #2A363B;
+  padding-bottom: 15px;
+}
+
 .card2 h3 {
   padding: 15px;
 	background-color:#03344b;
   color: #f8f8f8;
 	transition: all 0.7s cubic-bezier(.25,.8,.25,1);
   border-bottom: 1px solid #e6e6e6;
+  gap: 5px;
 }
 
 .card2 h4 {
@@ -61,9 +71,8 @@
 
 .indicatorCard {
   background: #fff;
-  margin: 20px;
-  float: left;
-  width: 250px;
+  margin: 10px;
+  width: 300px;
   min-height: 220px;
   background-color: #fff;
   padding: 20px;
@@ -77,51 +86,27 @@
   background-color: #fecea8;
 }
 
-.links {
-  border-left: 1px solid rgba(238,238,237,255);
-  padding-left: 5px;
-  fill: #e84a5f;
-}
-
-.linkURL {
-  fill: #e84a5f;
-}
-
-.expandIndicatorButton {
-  color: #e84a5f;
-  border-radius: 50%;
-  border: 1px solid #e84a5f;
-  float: right;
-  height: 20px;
-  width: 20px;
-  text-align: center;
-  line-height: 22px;
-  cursor: pointer;
-}
-
 .indicatorCard a {
-  font-size: 25px;
-  color: #e84a5f;
   border-radius: 50%;
   border: 1px solid #e84a5f;
-  float: right;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   text-align: center;
-  line-height: 22px;
+  line-height: 40px;
 }
 
 .indicatorCard h1{
-  font-size: 21px;
+  font-size: 24px;
   text-align: left;
-  border-bottom: 1px solid #424242;
-  padding-bottom: 15px;
-  display: flex;
+  flex: 1;
+  margin-top: 0px;
+  color: #2A363B;
+  letter-spacing: 1px;
 }
 
 .indicatorCard h2 {
   font-size: 20px;
-  color: #3eaca8;
+  color: #107E7C;
   padding-top: 10px;
   text-align: left;
   font-style: normal;
@@ -131,7 +116,7 @@
 .indicatorCard h3 {
   text-align: left;
   font-size: 14px;
-  color: #d99c86;
+  color: #D49077;
   font-family: 'Lato', sans-serif;
   padding: 0px 0px 0px 5px;
 }
@@ -139,8 +124,36 @@
 .indicatorCard h4 {
   text-align: left;
   font-size: 14px;
-  color: #6f6f6f;
-  font-weight: 300;
+  color: #707070;
+  font-weight: 400;
   font-family: 'Lato', sans-serif;
   padding: 0px 0px 0px 5px;
+}
+
+
+.links {
+  border-left: 1px solid rgba(238,238,237,255);
+  padding-left: 8px;
+  fill: #e84a5f;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.linkURL {
+  fill: #e84a5f;
+}
+
+.links *:hover {
+  background-color: #e6c6ca;
+}
+
+.expandIndicatorButton {
+  border-radius: 50%;
+  border: 1px solid #e84a5f;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  line-height: 40px;
+  cursor: pointer;
 }
