--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -7,10 +7,9 @@
   box-sizing: border-box;
   margin: 0;
   display: grid;
-	grid-template-columns: 1fr 4fr;
-	gap: 5px 5px;
-	grid-template-areas:
-    "leftnav";
+  grid-template-columns: 1fr 4fr;
+  gap: 5px 5px;
+  grid-template-areas: 'leftnav';
   background-color: #eeeeec;
   min-height: calc(100vh - 269px);
   overflow-y: scroll;
@@ -38,7 +37,7 @@
   font-size: 22px;
 }
 
-.downloadAll{
+.downloadAll {
   fill: #e84a5f;
   border-color: transparent;
   margin-top: -5px;
@@ -48,15 +47,15 @@
 .cardTitles {
   display: flex;
   gap: 10px;
-  border-bottom: 1px solid #2A363B;
+  border-bottom: 1px solid #2a363b;
   padding-bottom: 15px;
 }
 
 .card2 h3 {
   padding: 25px 15px 10px 15px;
-	background-color:#03344b;
+  background-color: #03344b;
   color: #f8f8f8;
-	transition: all 0.7s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1);
   border-bottom: 1px solid #e6e6e6;
   gap: 5px;
   display: flex;
@@ -76,13 +75,13 @@
   min-height: 220px;
   background-color: #fff;
   padding: 20px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   border-radius: 5%;
 }
 
 .indicatorCard:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background-color: #fecea8;
 }
 
@@ -95,18 +94,18 @@
   line-height: 40px;
 }
 
-.indicatorCard h1{
+.indicatorCard h1 {
   font-size: 24px;
   text-align: left;
   flex: 1;
   margin-top: 0px;
-  color: #2A363B;
+  color: #2a363b;
   letter-spacing: 1px;
 }
 
 .indicatorCard h2 {
   font-size: 20px;
-  color: #107E7C;
+  color: #107e7c;
   padding-top: 10px;
   text-align: left;
   font-style: normal;
@@ -116,7 +115,7 @@
 .indicatorCard h3 {
   text-align: left;
   font-size: 14px;
-  color: #D49077;
+  color: #d49077;
   font-family: 'Lato', sans-serif;
   padding: 0px 0px 0px 5px;
 }
@@ -130,9 +129,8 @@
   padding: 0px 0px 0px 5px;
 }
 
-
 .links {
-  border-left: 1px solid rgba(238,238,237,255);
+  border-left: 1px solid rgba(238, 238, 237, 255);
   padding-left: 8px;
   fill: #e84a5f;
   display: flex;
@@ -158,7 +156,7 @@
   cursor: pointer;
 }
 
-.openFilters{
+.openFilters {
   background-color: transparent;
   border-color: transparent;
   margin-top: -5px;
