--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -80,12 +80,34 @@
   border-radius: 5%;
 }
 
+.expandedCard {
+  background-color: #fff;
+  margin: 10px;
+  padding: 20px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  width: 1380px;
+  height: 500px;
+  border-radius: 1%;
+  opacity: 1;
+  transition: all 1s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.expandedCard.noshow {
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  transition: all 1s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
 .indicatorCard:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background-color: #fecea8;
 }
 
-.indicatorCard a {
+.indicatorCard a,
+.expandedCard a {
   border-radius: 50%;
   border: 1px solid #e84a5f;
   height: 30px;
@@ -94,7 +116,8 @@
   line-height: 40px;
 }
 
-.indicatorCard h1 {
+.indicatorCard h1,
+.expandedCard h1 {
   font-size: 24px;
   text-align: left;
   flex: 1;
@@ -103,7 +126,8 @@
   letter-spacing: 1px;
 }
 
-.indicatorCard h2 {
+.indicatorCard h2,
+.expandedCard h2 {
   font-size: 20px;
   color: #107e7c;
   padding-top: 10px;
@@ -112,7 +136,8 @@
   font-family: 'Lato', sans-serif;
 }
 
-.indicatorCard h3 {
+.indicatorCard h3,
+.expandedCard h3 {
   text-align: left;
   font-size: 14px;
   color: #d49077;
@@ -120,13 +145,18 @@
   padding: 0px 0px 0px 5px;
 }
 
-.indicatorCard h4 {
+.indicatorCard h4,
+.expandedCard h4 {
   text-align: left;
   font-size: 14px;
   color: #707070;
   font-weight: 400;
   font-family: 'Lato', sans-serif;
   padding: 0px 0px 0px 5px;
+}
+
+.expandedCard h4 {
+  white-space: pre-line;
 }
 
 .links {
