Remove transition in cards so scrollIntoView works

--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -76,19 +76,22 @@
   background-color: #fff;
   padding: 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  /* transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); */
   border-radius: 5%;
 }
 
 .expandedCard {
   width: 1380px;
-  height: 500px;
   border-radius: 1%;
 }
 
 .indicatorCard:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background-color: #fecea8;
+}
+
+.expandedCard:hover {
+  background-color: #fff;
 }
 
 .indicatorCard a {
