Move view when card is closed

--- a/packages/indicators/src/main.css
+++ b/packages/indicators/src/main.css
@@ -76,13 +76,18 @@
   background-color: #fff;
   padding: 20px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  /* transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); */
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   border-radius: 5%;
+}
+
+.indicatorCard.no-transition {
+  transition: none;
 }
 
 .expandedCard {
   width: 1380px;
   border-radius: 1%;
+  transition: none;
 }
 
 .indicatorCard:hover {
