Adjust space in NoS bars

--- a/src/main.css
+++ b/src/main.css
@@ -1843,6 +1843,7 @@ div[class*="eaRHYv"] {
 .numberSP {
   display: flex;
   justify-content:space-between;
+  align-items: center;
 }
 
 .nos-title {
