--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,8 @@
- * , *:before, *:after { 
-     box-sizing:border-box; 
-     -moz-box-sizing:border-box; 
-     -webkit-box-sizing:border-box; 
-     -ms-box-sizing:border-box;
+ * , *:before, *:after {
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  -ms-box-sizing:border-box;
 }
 
 * {
@@ -2867,6 +2867,25 @@ tspan, .vx-axis-label {
   box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 7px rgba(0, 0, 0, 0.22);
 }
 
+.portCard .button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.portCard .button {
+  border-radius: 50%;
+  border: 1px solid #e84a5f;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  line-height: 37px;
+  cursor: pointer;
+}
+
+.portCard .button:hover {
+  background-color: #e6c6ca;
+}
+
 .pcTitle {
 	display: block;
 	border-bottom: 1px solid #2A363B;
@@ -2946,7 +2965,7 @@ tspan, .vx-axis-label {
 
 /* Media Queries */
 @media screen and (max-width: 1400px){
-	
+
 	.portText1 {
 		grid-template-columns: 1fr;
 		grid-gap: 1rem;
