Adjust style to change indicator tab color

--- a/src/main.css
+++ b/src/main.css
@@ -1525,7 +1525,7 @@ overflow: auto;
 	color: #e84a5f !important;
 }
 
-.MuiTabs-indicator.css-1aquho2-MuiTabs-indicator {
+.DrawerTab .MuiTabs-indicator {
 	background-color: #e84a5f !important;
 }
 
