add new styles for new icons of info texts

--- a/src/main.css
+++ b/src/main.css
@@ -1844,7 +1844,7 @@ div[class*="eaRHYv"] {
   padding: 10px;
   font-size: 16px;
   display: block;
-  text-align: right;
+  text-align: left;
   color: #fff;
   font-weight: 400;
   background-color: #2a363b;
@@ -1907,8 +1907,10 @@ div[class*="eaRHYv"] {
 	margin-bottom: 10px;
 }
 
-.pt6 h2 svg {
-	color: #cccccc;
+.pt6 h2 svg,
+.pt5 h3 svg,
+.pt6 h3 svg {
+	color: #bbbbbb;
 }
 
 .pt6 .graphinfo {
@@ -1916,6 +1918,15 @@ div[class*="eaRHYv"] {
 	text-align: left;
 	padding-left: 10px;
 	margin-bottom: 10px;
+	cursor: pointer;
+}
+
+.pt6 .graphinfo3,
+.pt5 .graphinfo3 {
+	display: inline-block;
+	margin-right: 10px;
+	margin-bottom: 5px;
+	cursor: pointer;
 }
 
 .pt6 p {
@@ -2189,11 +2200,11 @@ p.legcomp {
 }
 
 .icondown-container svg {
-	color: #cccccc;
+	color: #bbbbbb;
 }
 
 .icondown-container svg:hover {
-	color: #2a363b;
+	color: #e84a5f;
 }
 
 .icongraph, .icondelete {
