--- a/src/main.css
+++ b/src/main.css
@@ -1607,6 +1607,10 @@ div[class*="eaRHYv"] {
   border-bottom: 1px solid transparent;
 }
 
+.tittlebtn {
+  display: inline-block;
+}
+
 .geobtn svg {
   font-size: 30px;
 }
@@ -1886,7 +1890,8 @@ div[class*="eaRHYv"] {
 	color: #e84a5f;
 }
 
-.graphinfo2-true p {
+.graphinfo2-true p,
+.graphinfo3-true p {
 	font-family: 'Lato', sans-serif;
 	color: #424242;
 	padding: 3px 8px 10px 20px;
@@ -1895,7 +1900,12 @@ div[class*="eaRHYv"] {
     line-height: 1.3;
 }
 
-.graphinfo2-true {
+.graphinfo3-true p {
+	padding: 13px 8px 10px 20px;
+}
+
+.graphinfo2-true,
+.graphinfo3-true {
 	-webkit-transition: all 1s;
 	-moz-transition: all 1s;
 	-ms-transition: all 1s;
@@ -1915,7 +1925,9 @@ div[class*="eaRHYv"] {
 
 .pt6 h2 svg:hover,
 .pt5 h3 svg:hover,
-.pt6 h3 svg:hover {
+.pt6 h3 svg:hover,
+.downSpecial:hover,
+.downSpecial2:hover  {
 	color: #e84a5f;
 }
 
@@ -2828,7 +2840,7 @@ tspan, .vx-axis-label {
 }
 
 .ul-padding-info-text {
-	padding-left: 60px;
+	padding-left: 35px;
 	color: #424242;
 	font-size: 11px;
 	list-style: disc;
@@ -3002,12 +3014,15 @@ tspan, .vx-axis-label {
 .downSpecial {
 	vertical-align: top;
 	padding: 15px 0 0 5px;
+	color: #bbbbbb;
 }
+
 .downSpecial2 {
 	vertical-align: top;
 	padding: 12px 7px 0 7px;
 	background-color: #fff;
 	margin: -13px 0 0 5px;
+	color: #bbbbbb;
 }
 
 .downSpecial3{
