--- a/src/main.css
+++ b/src/main.css
@@ -1987,6 +1987,13 @@ div[class*="eaRHYv"] {
 	color: #4a585f;
 }
 
+.graphcardAcc h3.textBoxes {
+	border: none;
+	display: block;
+  padding: 3px 5px;
+  margin: 0 0 5px 7px;
+}
+
 .pt6 h6 {
 	margin-right: 0;
 }
