--- a/src/main.css
+++ b/src/main.css
@@ -1874,11 +1874,11 @@ div[class*="eaRHYv"] {
 .graphcardAcc .graphinfo {
 	padding-left: 0px;
 	padding-right: 0;
-	color: #cccccc;
+	color: #bbbbbb;
 }
 
 .graphinfobox {
-	padding-left: 27px;
+	padding-left: 10px;
 	margin-bottom: 20px;
 }
 
@@ -1894,14 +1894,14 @@ div[class*="eaRHYv"] {
 .graphinfo3-true p {
 	font-family: 'Lato', sans-serif;
 	color: #424242;
-	padding: 3px 8px 10px 20px;
+	padding: 3px 8px 10px 0;
 	text-align: left;
 	font-size: 12px;
-    line-height: 1.3;
+  line-height: 1.3;
 }
 
-.graphinfo3-true p {
-	padding: 13px 8px 10px 20px;
+.pt5 .graphinfo3-true p {
+	padding-top: 13px;
 }
 
 .graphinfo2-true,
@@ -1913,8 +1913,11 @@ div[class*="eaRHYv"] {
 	transition: all 1s;
 	border-bottom: 1px solid #dddddd;
 	width: 94%;
-	margin: 0;
-	margin-bottom: 10px;
+	margin: 0 0 15px 20px;
+}
+
+.graphinfo2-true {
+	margin-left: 10px;
 }
 
 .pt6 h2 svg,
@@ -1949,6 +1952,14 @@ div[class*="eaRHYv"] {
 
 .pt6 p {
 	margin: 5px 0 0 15px;
+}
+
+.ml10 .graphinfo2-true {
+	margin-left: 20px;
+}
+
+.ml10 .graphinfobox .graphinfo2-true {
+	margin-left: 10px;
 }
 
 .svgPointer, .svgPointer2 {
@@ -1991,7 +2002,7 @@ div[class*="eaRHYv"] {
 	border: none;
 	display: block;
   padding: 3px 5px;
-  margin: 0 0 5px 7px;
+  margin: 0 0 5px 22px;
 }
 
 .pt6 h6 {
@@ -2067,7 +2078,7 @@ div[class*="eaRHYv"] {
 }
 
 .richnessLegend {
-  margin: 10px 0 5px 30px;
+  margin: 10px 0 10px 15px;
 }
 
 .richnessLegend p {
@@ -2076,7 +2087,7 @@ div[class*="eaRHYv"] {
 }
 
 .dpcLegend {
-	margin-left: 25px;
+	margin-bottom: 10px;
 }
 
 .dpcLegend p {
