--- a/src/main.css
+++ b/src/main.css
@@ -2593,6 +2593,38 @@ tspan, .vx-axis-label {
 	cursor: pointer;
 }
 
+.customTickBarRight {
+	color: #000;
+	font-size: 10px;
+	line-height: normal;
+	background-color: #fff;
+	border-left: 2px solid black;
+	padding-left: 3px;
+	white-space: initial;
+	overflow: hidden;
+}
+
+.customTickBarLeft {
+	font-family: sans-serif;
+	font-size: 11px;
+	fill: rgb(51,51,51);
+	text-align: right;
+	line-height: 1;
+	white-space: initial;
+	overflow: hidden;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.rightTitle {
+	text-align: right;
+	font-size: 11px;
+	color: #424242;
+	font-weight: 700;
+	padding-right: 8px;
+	margin-bottom: -20px;
+}
+
 .newProjectTitle {
 	display: -webkit-flex;
 	display: -moz-flex;
