--- a/src/main.css
+++ b/src/main.css
@@ -922,11 +922,21 @@ footer h4 {
 	vertical-align: top;
 }
 
-footer h3 a, .footersm h3 a {
+footer h3 a, .footersm h3 a{
 	color: #e84a5f;
 	font-size: 15px;
 }
 
+.footerTooltip {
+	border: none !important; 
+	background: none !important; 
+	color: #e84a5f !important; 
+	font-size: 15px !important;
+}
+
+.quoteStyle {
+	width: 130px;
+}
 
 /* isotope */
 
