--- a/src/main.css
+++ b/src/main.css
@@ -931,6 +931,7 @@ footer h3 a, .footersm h3 a{
 	border: none !important; 
 	background: none !important; 
 	color: #e84a5f !important; 
+	font-family: 'Lato', sans-serif;
 	font-size: 15px !important;
 }
 
