--- a/src/main.css
+++ b/src/main.css
@@ -928,11 +928,11 @@ footer h3 a, .footersm h3 a{
 }
 
 .footerTooltip {
-	border: none !important; 
-	background: none !important; 
-	color: #e84a5f !important; 
+	border: none; 
+	background: none; 
+	color: #e84a5f; 
 	font-family: 'Lato', sans-serif;
-	font-size: 15px !important;
+	font-size: 15px;
 }
 
 .quoteStyle {
