Delete important in main css and remove className

--- a/src/main.css
+++ b/src/main.css
@@ -2922,7 +2922,7 @@ tspan, .vx-axis-label {
 	padding-top: 3px;
 }
 
-.warningNote {
+h3.warningNote {
 	color: #e84a5f !important;
 	font-size: 10px !important;
 	padding-left: 10px !important;
