--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,8 @@ body {
 	height: 100%;
 }
 
+iframe#webpack-dev-server-client-overlay{display:none!important}
+
 .sr-only {
     display: none;
 }
@@ -928,9 +930,9 @@ footer h3 a, .footersm h3 a {
 }
 
 .footerTooltip {
-	border: none; 
-	background: none; 
-	color: #e84a5f; 
+	border: none;
+	background: none;
+	color: #e84a5f;
 	font-family: 'Lato', sans-serif;
 	font-size: 15px;
 }
