--- a/src/main.css
+++ b/src/main.css
@@ -924,6 +924,10 @@ footer h4 {
 	vertical-align: top;
 }
 
+.footersm h3 button{
+	cursor: pointer;
+}
+
 footer h3 a, .footersm h3 a {
 	color: #e84a5f;
 	font-size: 15px;
